@@ -1,6 +1,6 @@
 /* This is dvipdfmx, an eXtended version of dvipdfm by Mark A. Wicks.
 
-    Copyright (C) 2008-2016 by Jin-Hwan Cho, Matthias Franz, and Shunsaku Hirata,
+    Copyright (C) 2008-2018 by Jin-Hwan Cho, Matthias Franz, and Shunsaku Hirata,
     the dvipdfmx project team.
 
     Copyright (C) 1998, 1999 by Mark A. Wicks <mwicks@kettering.edu>
@@ -780,6 +780,13 @@ pdf_font_load_type1 (pdf_font *font)
           GIDMap[num_glyphs++] = achar_gid;
           charset->data.glyphs[charset->num_entries] = cff_get_seac_sid(cffont, achar_name);
           charset->num_entries += 1;
+#if !defined(LIBDPX)
+          /* CharSet is actually string object. */
+          {
+            pdf_add_stream(pdfcharset, "/", 1);
+            pdf_add_stream(pdfcharset, achar_name, strlen(achar_name));
+          }
+#endif /* !LIBDPX */
         }
 
         for (i = 0; i < num_glyphs; i++) {
@@ -792,6 +799,13 @@ pdf_font_load_type1 (pdf_font *font)
           GIDMap[num_glyphs++] = bchar_gid;
           charset->data.glyphs[charset->num_entries] = cff_get_seac_sid(cffont, bchar_name);
           charset->num_entries += 1;
+ #if !defined(LIBDPX)
+          /* CharSet is actually string object. */
+          {
+            pdf_add_stream(pdfcharset, "/", 1);
+            pdf_add_stream(pdfcharset, bchar_name, strlen(bchar_name));
+          }
+#endif /* !LIBDPX */         
         }
       }
       widths[gid] = gm.wx;
@@ -846,10 +860,6 @@ pdf_font_load_type1 (pdf_font *font)
     RELEASE(widths);
   if (GIDMap)
     RELEASE(GIDMap);
-
-  /*
-   * Maybe writing Charset is recommended for subsetted font.
-   */
 
   return 0;
 }
